--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "cross-env": "6.0.3",
-    "dotenv": "8.2.0",
+    "dotenv": "^8.2.0",
     "express": "4.17.1",
     "express-async-errors": "^3.1.1",
     "helmet": "^3.22.0",
